# types-and-programming-languages

./: .gitignore  flake.nix  readme.md  shell.nix
04arith/: 04arith.cabal  CHANGELOG.md
04arith/app/: Main.hs
04arith/src/: 04-arith.hs
04arith/src/Arith/: Evaluator.hs  Parser.hs  Syntax.hs
